<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPanel">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Media -->
                    <ImageView
                        android:layout_width="194dp"
                        android:layout_height="194dp"
                        android:layout_marginStart="95dp"
                        app:srcCompat="@drawable/traininglogo"
                        android:scaleType="centerCrop"
                        android:contentDescription="hola que tal"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:text="@string/trainingtitle"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            />

                        <com.google.android.material.textfield.TextInputLayout

                            android:layout_width="350dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="15dp"
                            app:boxStrokeColor="@color/colorPrimaryDark"
                            android:textColorHint="@color/colorPrimaryDark"
                            app:hintTextColor="@color/colorPrimaryDark"
                            android:hint="@string/getdate"

                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/currentDay"
                                android:inputType="datetime"
                                android:enabled="false"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout

                            android:layout_width="350dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="15dp"
                            app:boxStrokeColor="@color/colorPrimaryDark"
                            android:textColorHint="@color/colorPrimaryDark"
                            app:hintTextColor="@color/colorPrimaryDark"
                            android:hint="@string/user_field"

                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                            <Spinner
                                android:id="@+id/spinnerTypeTraining"
                                android:layout_width="match_parent"
                                android:layout_height="50dp">

                            </Spinner>

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout

                            android:layout_width="350dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="15dp"
                            app:boxStrokeColor="@color/colorPrimaryDark"
                            android:textColorHint="@color/colorPrimaryDark"
                            app:hintTextColor="@color/colorPrimaryDark"
                            android:hint="@string/height"

                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/heightField"
                                android:inputType="numberDecimal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout

                            android:layout_width="350dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="15dp"
                            app:boxStrokeColor="@color/colorPrimaryDark"
                            android:textColorHint="@color/colorPrimaryDark"
                            app:hintTextColor="@color/colorPrimaryDark"
                            android:hint="@string/Weight"

                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/weightField"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <!-- Buttons -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="25dp"
                        android:layout_margin="8dp"
                        android:orientation="horizontal">
                        <com.google.android.material.button.MaterialButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:textColor="@color/colorPrimaryDark"
                            android:text="@string/generateControl"
                            style="?attr/borderlessButtonStyle"
                            />
                        <com.google.android.material.button.MaterialButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="70dp"
                            android:textColor="@color/colorPrimaryDark"
                            android:text="@string/vercontrol"
                            style="?attr/borderlessButtonStyle"
                            />
                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>